include editText 분리

--- a/app/src/main/res/layout/fragment_size.xml
+++ b/app/src/main/res/layout/fragment_size.xml
@@ -5,13 +5,15 @@
 
     <data>
 
-        <variable
-            name="size"
-            type="com.example.project_myfit.data.model.Size" />
+        <import type="android.view.View" />
 
         <variable
-            name="constant"
-            type="com.example.project_myfit.util.MyFitConstant" />
+            name="size"
+            type="com.example.myfit.data.model.model.Size" />
+
+        <variable
+            name="autoCompleteAdapter"
+            type="com.example.myfit.ui.search.adapter.AutoCompleteAdapter" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -21,7 +23,7 @@
         android:clipToPadding="false"
         android:overScrollMode="never"
         android:paddingBottom="@dimen/_68sdp"
-        tools:context=".main.size.SizeFragment">
+        tools:context=".ui.main.size.SizeFragment">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -47,6 +49,7 @@
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/iv"
+                        setUri="@{size.imageUri}"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
 
@@ -57,6 +60,7 @@
                         android:layout_gravity="center"
                         android:alpha="0.2"
                         android:clickable="false"
+                        setAddIcon="@{size.imageUri}"
                         android:src="@drawable/icon_add_image" />
 
                 </com.google.android.material.card.MaterialCardView>
@@ -68,51 +72,26 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_16sdp"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="@{size.id == 0 ? View.INVISIBLE : View.VISIBLE}">
 
-                <androidx.appcompat.widget.LinearLayoutCompat
+                <com.google.android.material.textview.MaterialTextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_2sdp"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:alpha="0.7"
+                    android:text="@{@string/size_created_time + ' '+size.createdTime}"
+                    android:textSize="@dimen/_7sdp"
+                    tools:text="생성일 : 2021년 10월 14일 10:34:10" />
 
-                    <com.google.android.material.textview.MaterialTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_2sdp"
-                        android:layout_marginTop="@dimen/_2sdp"
-                        android:alpha="0.7"
-                        android:text="@string/size_created_time"
-                        android:textSize="@dimen/_7sdp" />
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_2sdp"
-                        android:alpha="0.7"
-                        android:text="@{size.createdTime}"
-                        android:textSize="@dimen/_7sdp"
-                        tools:text=" 2021년 10월 14일 10:34:10" />
-                </androidx.appcompat.widget.LinearLayoutCompat>
-
-                <androidx.appcompat.widget.LinearLayoutCompat
+                <com.google.android.material.textview.MaterialTextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_2sdp"
-                        android:alpha="0.7"
-                        android:text="@string/size_modified_time"
-                        android:textSize="@dimen/_7sdp" />
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:alpha="0.7"
-                        android:text="@{size.modifiedTime}"
-                        android:textSize="@dimen/_7sdp"
-                        tools:text=" 2021년 10월 14일 10:34:10" />
-                </androidx.appcompat.widget.LinearLayoutCompat>
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_2sdp"
+                    android:alpha="0.7"
+                    android:text="@{@string/size_modified_time + ' ' + size.modifiedTime}"
+                    android:textSize="@dimen/_7sdp"
+                    tools:text="수정일 : 2021년 10월 14일 10:34:10" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.appcompat.widget.LinearLayoutCompat
@@ -140,6 +119,7 @@
                         android:layout_height="@dimen/_34sdp"
                         android:imeOptions="actionNext"
                         android:inputType="text"
+                        app:adapter="@{autoCompleteAdapter}"
                         android:completionThreshold="0"
                         android:text="@={size.brand}"
                         android:textSize="@dimen/_10sdp" />
@@ -193,10 +173,17 @@
                     </com.google.android.material.textfield.TextInputLayout>
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
-                <FrameLayout
-                    android:id="@+id/container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                <include
+                    layout="@layout/fragment_size_include_top"
+                    app:size="@{size}" />
+
+                <include
+                    layout="@layout/fragment_size_include_bottom"
+                    app:size="@{size}" />
+
+                <include
+                    layout="@layout/fragment_size_include_etc"
+                    app:size="@{size}" />
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
