--- a/app/src/main/res/layout/fragment_size_edit_text.xml
+++ b/app/src/main/res/layout/fragment_size_edit_text.xml
@@ -15,6 +15,7 @@
     </data>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
