--- a/app/src/main/res/layout/fragment_size_include_top.xml
+++ b/app/src/main/res/layout/fragment_size_include_top.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <import type="android.view.View" />
 
         <variable
             name="size"
@@ -11,6 +12,8 @@
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:visibility="@{size.parentIndex == 0 || size.parentIndex == 2 ?
+        View.VISIBLE : View.GONE}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
