오토컴플리트어댑터 패키지 변경

--- a/app/src/main/res/layout/activity_main_search_bar.xml
+++ b/app/src/main/res/layout/activity_main_search_bar.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="autoCompleteAdapter"
-            type="com.example.myfit.ui.search.adapter.AutoCompleteAdapter" />
+            type="com.example.myfit.util.adapter.AutoCompleteAdapter" />
     </data>
 
     <com.google.android.material.textfield.TextInputLayout
