--- a/app/src/main/res/layout/fragment_list_recycler_view_folder.xml
+++ b/app/src/main/res/layout/fragment_list_recycler_view_folder.xml
@@ -8,12 +8,12 @@
         <import type="android.view.View" />
 
         <variable
-            name="listFragment"
-            type="com.example.myfit.ui.main.list.ListFragment" />
-
-        <variable
             name="model"
             type="com.example.myfit.ui.main.list.ListViewModel" />
+
+        <variable
+            name="listFragment"
+            type="com.example.myfit.ui.main.list.ListFragment" />
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -21,8 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="@{model.folderTuplesLive.empty ?
-                    View.GONE : View.VISIBLE}">
+        android:visibility="@{model.folderTuplesLive.empty ? View.GONE : View.VISIBLE}">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iconToggle"
@@ -32,19 +31,19 @@
             android:layout_marginEnd="@dimen/_4sdp"
             android:alpha="0.8"
             android:onClick="@{() -> model.changeFolderToggleState()}"
-            app:srcCompat="@{model.folderTogglePreferenceLive}"
+            toggle="@{model.folderTogglePreferenceLive}"
             tools:src="@drawable/icon_triangle_down" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv"
+            android:visibility="@{model.folderTogglePreferenceLive ? View.VISIBLE : View.GONE}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:nestedScrollingEnabled="false"
             android:overScrollMode="never"
             android:paddingHorizontal="@dimen/_8sdp"
-            android:visibility="@{model.folderTogglePreferenceLive ?
-                        View.VISIBLE : View.INVISIBLE}"
+            app:onTouchListener="@{(v, event) -> listFragment.folderDragSelect.onRecyclerViewTouch(v, event)}"
             app:adapter="@{listFragment.folderAdapter}"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="4"
