--- a/app/src/main/res/layout/fragment_list_text_navigation.xml
+++ b/app/src/main/res/layout/fragment_list_text_navigation.xml
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:alpha="0.9"
                 android:onClick="@{() -> listFragment.navigateSelf()}"
-                android:text="@{model.getCategoryLive().name}"
+                android:text="@{model.categoryLive.name}"
                 android:textSize="@dimen/_11sdp"
                 tools:text="Short Sleeve" />
         </androidx.appcompat.widget.LinearLayoutCompat>
