--- a/app/src/main/res/layout/item_vh_folder_grid.xml
+++ b/app/src/main/res/layout/item_vh_folder_grid.xml
@@ -14,98 +14,108 @@
         <variable
             name="baseAdapter"
             type="com.example.myfit.util.adapter.BaseAdapter" />
+
+        <variable
+            name="dragging"
+            type="boolean" />
     </data>
 
-    <FrameLayout
-        android:onClick="@{() -> folderGridVH != null ? folderGridVH.itemViewClick() : void}"
-        android:visibility="@{folderGridVH != null ? View.VISIBLE : View.INVISIBLE}"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:onClick="@{() -> folderGridVH.tuple.id != -1 ? folderGridVH.itemViewClick() : void}"
+        android:visibility="@{folderGridVH.tuple.id != -1 ? View.VISIBLE : View.INVISIBLE}"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:onLongClickListener="@{() -> folderGridVH != null ? folderGridVH.itemViewLongClick() : false}">
+        app:onLongClickListener="@{() -> folderGridVH.tuple.id != -1 ? folderGridVH.itemViewLongClick() : false}">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cardView"
+            android:layout_width="@dimen/_64sdp"
+            android:layout_height="@dimen/_64sdp"
+            android:layout_margin="@dimen/_4sdp"
+            android:translationZ="@{dragging ? 10f : 0f}"
+            app:cardCornerRadius="@dimen/_8sdp"
+            app:cardElevation="@dimen/_3sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/cardView"
-                android:layout_width="@dimen/_64sdp"
-                android:layout_height="@dimen/_64sdp"
-                android:layout_margin="@dimen/_4sdp"
-                app:cardCornerRadius="@dimen/_8sdp"
-                app:cardElevation="@dimen/_3sdp">
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:alpha="@{dragging ? 0.5f : 1}"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:maxLines="3"
+                android:paddingTop="@dimen/_4sdp"
+                android:text="@{folderGridVH.tuple.name}"
+                android:textSize="@dimen/_9sdp"
+                tools:text="아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tvName"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:ellipsize="end"
-                    android:gravity="center"
-                    android:maxLines="3"
-                    android:paddingTop="@dimen/_4sdp"
-                    android:text="@{folderGridVH.tuple.name}"
-                    android:textSize="@dimen/_9sdp"
-                    tools:text="아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아" />
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/iconDragHandle"
-                    dragHandleActionMode="@{baseAdapter}"
-                    app:onTouchListener="@{(view, event) -> folderGridVH != null ?
-                    folderGridVH.dragStart(view, event) : false}"
-                    setDragHandle2="@{}"
-                    android:layout_gravity="end"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.9"
-                    android:layout_marginTop="-4dp"
-                    android:layout_marginEnd="-3dp"
-                    android:visibility="gone"
-                    android:scaleX="0.5"
-                    android:scaleY="0.7"
-                    tools:src="@drawable/icon_drag_handle2" />
-
-                <com.google.android.material.checkbox.MaterialCheckBox
-                    android:id="@+id/cb"
-                    gridActionMode="@{baseAdapter}"
-                    android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
-                    android:layout_gravity="start"
-                    android:layout_marginStart="-4dp"
-                    android:layout_marginTop="-3dp"
-                    android:alpha="0.8"
-                    android:buttonTint="?colorControlNormal"
-                    android:clickable="false"
-                    android:enabled="false"
-                    android:scaleX="0.6"
-                    android:scaleY="0.6"
-                    android:visibility="gone" />
-
-            </com.google.android.material.card.MaterialCardView>
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/layoutContentsSize"
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iconDragHandle"
+                dragHandleActionMode="@{baseAdapter}"
+                setDragHandle2='@{""}'
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="end"
+                android:layout_marginTop="-4dp"
+                android:layout_marginEnd="-3dp"
+                android:alpha="0.9"
+                android:scaleX="0.5"
+                android:scaleY="0.7"
+                android:visibility="gone"
+                app:onTouchListener="@{(view, event) -> folderGridVH.tuple.id != -1 ? folderGridVH.dragStart(event) : false}"
+                tools:src="@drawable/icon_drag_handle2"
+                tools:visibility="visible" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tvContentSize"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{folderGridVH.tuple.contentSize}"
-                    android:textSize="@dimen/_8sdp"
-                    tools:text="2" />
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/cb"
+                gridActionMode="@{baseAdapter}"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_gravity="start"
+                android:layout_marginStart="-4dp"
+                android:layout_marginTop="-3dp"
+                android:alpha="@{dragging ? 0.5f : 0.8f}"
+                android:buttonTint="?colorControlNormal"
+                android:clickable="false"
+                android:enabled="false"
+                android:scaleX="0.6"
+                android:scaleY="0.6"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tvItems"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_2sdp"
-                    android:text="@{folderGridVH.tuple.contentSize == 1 ? @string/item_folder_item : @string/item_folder_items"
-                    android:textSize="@dimen/_8sdp"
-                    tools:text="@string/item_folder_items" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
+        </com.google.android.material.card.MaterialCardView>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/layoutContentsSize"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:visibility="@{dragging ? View.INVISIBLE : View.VISIBLE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cardView">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvContentSize"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{folderGridVH.tuple.contentSize}"
+                android:textSize="@dimen/_8sdp"
+                tools:text="2" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvItems"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_2sdp"
+                android:text="@{folderGridVH.tuple.contentSize == 1 ? @string/item_folder_item : @string/item_folder_items}"
+                android:textSize="@dimen/_8sdp"
+                tools:text="@string/item_folder_items" />
         </androidx.appcompat.widget.LinearLayoutCompat>
-    </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
